--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="WhatsApp API &amp;amp; Zap das Galáxias">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>ZAP das Galáxias - WhatsApp API</title>
+    <title>Conectar - Opará API</title>
     <link rel="stylesheet" href="zdg2.css" media="screen">
     <link rel="stylesheet" href="zdg.css" media="screen">
     <link rel="icon" type="image/x-icon" href="/images/icon.ico">
@@ -72,7 +72,7 @@
             <div class="u-layout-row">
               <div class="u-align-left u-container-style u-layout-cell u-size-30 u-white u-layout-cell-1">
                 <div class="u-container-layout u-valign-middle u-container-layout-1">
-                  <h6 class="u-text u-text-default u-text-grey-50 u-text-1">ZAP das Galáxias</h6>
+                  <h6 class="u-text u-text-default u-text-grey-50 u-text-1">Um produto Opará Tech</h6>
                   <h2 class="u-custom-font u-font-source-sans-pro u-text u-text-2">WhatsApp API</h2>
                   <ul class="u-custom-list u-text u-text-3">
                     <li>
