--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="WhatsApp API &amp;amp; Zap das Galáxias">
+    <meta name="keywords" content="WhatsApp API &amp;amp; Um produto Opará Tecnologia">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Conectar - Opará API</title>
@@ -22,22 +22,22 @@
 		"logo": "#"
     }
     </script>
-    <meta name="theme-color" content="#2e937a">
+    <meta name="theme-color" content="#fed100">
     <meta property="og:title" content="Página Inicial">
     <meta property="og:type" content="website">
   </head>
   <body data-home-page="Página-Inicial.html" data-home-page-title="Página Inicial" class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-84ba"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
     <br>
     <br>
-    <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="XL">
+    <!-- <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="XL">
       <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 500;" wfd-invisible="true">
         <a class="u-button-style u-custom-active-color u-custom-border u-custom-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
           <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
           <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"><g><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
 </g></svg>
         </a>
-      </div>
-      <div class="u-nav-container" wfd-invisible="true">
+      </div> -->
+      <!-- <div class="u-nav-container" wfd-invisible="true">
         <ul class="u-nav u-spacing-2 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-grey-5 u-button-style u-hover-grey-10 u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="#inicio" style="padding: 10px 20px;">Página Inicial</a>
 </li><li class="u-nav-item"><a class="u-active-grey-5 u-button-style u-hover-grey-10 u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="#app" style="padding: 10px 20px;">API Gratuita</a>
 </li><li class="u-nav-item"><a class="u-active-grey-5 u-button-style u-hover-grey-10 u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="#ferramenta" style="padding: 10px 20px;">Ferramenta</a>
@@ -63,7 +63,7 @@
         </div>
         <div class="u-black u-menu-overlay u-opacity u-opacity-70" wfd-invisible="true"></div>
       </div>
-    </nav>
+    </nav> -->
   </div></header>
     <section class="u-align-center u-clearfix u-palette-3-light-2 u-section-1" id="inicio">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
@@ -78,22 +78,22 @@
                     <li>
                       <div class="u-list-icon u-text-palette-2-base">
                         <svg class="u-svg-content" viewBox="0 0 415.994 415.994" id="svg-aeac" style="font-size: 0.5em; margin: -0.5em;"><path d="m391.645 193.946-352-192c-4.96-2.688-10.976-2.592-15.808.288-4.864 2.88-7.84 8.128-7.84 13.76v384c0 5.664 2.976 10.88 7.84 13.76 2.496 1.504 5.344 2.24 8.16 2.24 2.656 0 5.28-.672 7.648-1.984l352-192c5.152-2.752 8.352-8.16 8.352-14.016s-3.2-11.264-8.352-14.048z" fill="currentColor"></path></svg>
-                      </div> 100% Gratuita
+                      </div> Clique nos 3 pontos no canto superior direito do seu WhatsApp
                     </li>
                     <li>
                       <div class="u-list-icon u-text-palette-2-base">
                         <svg class="u-svg-content" viewBox="0 0 415.994 415.994" id="svg-aeac" style="font-size: 0.5em; margin: -0.5em;"><path d="m391.645 193.946-352-192c-4.96-2.688-10.976-2.592-15.808.288-4.864 2.88-7.84 8.128-7.84 13.76v384c0 5.664 2.976 10.88 7.84 13.76 2.496 1.504 5.344 2.24 8.16 2.24 2.656 0 5.28-.672 7.648-1.984l352-192c5.152-2.752 8.352-8.16 8.352-14.016s-3.2-11.264-8.352-14.048z" fill="currentColor"></path></svg>
-                      </div>Instale em menos de 5 minutos mesmo que você não saiba nada de programação
+                      </div>Clique em "Dispositivos Conectados"
                     </li>
                     <li>
                       <div class="u-list-icon u-text-palette-2-base">
                         <svg class="u-svg-content" viewBox="0 0 415.994 415.994" id="svg-aeac" style="font-size: 0.5em; margin: -0.5em;"><path d="m391.645 193.946-352-192c-4.96-2.688-10.976-2.592-15.808.288-4.864 2.88-7.84 8.128-7.84 13.76v384c0 5.664 2.976 10.88 7.84 13.76 2.496 1.504 5.344 2.24 8.16 2.24 2.656 0 5.28-.672 7.648-1.984l352-192c5.152-2.752 8.352-8.16 8.352-14.016s-3.2-11.264-8.352-14.048z" fill="currentColor"></path></svg>
-                      </div>Garanta a sua renda extra
+                      </div>Clique em "Conectar dispositivo"
                     </li>
                     <li>
                       <div class="u-list-icon u-text-palette-2-base">
                         <svg class="u-svg-content" viewBox="0 0 415.994 415.994" id="svg-aeac" style="font-size: 0.5em; margin: -0.5em;"><path d="m391.645 193.946-352-192c-4.96-2.688-10.976-2.592-15.808.288-4.864 2.88-7.84 8.128-7.84 13.76v384c0 5.664 2.976 10.88 7.84 13.76 2.496 1.504 5.344 2.24 8.16 2.24 2.656 0 5.28-.672 7.648-1.984l352-192c5.152-2.752 8.352-8.16 8.352-14.016s-3.2-11.264-8.352-14.048z" fill="currentColor"></path></svg>
-                      </div>Suporte para versão Beta
+                      </div>Aponte a câmera do seu celular para o QR Code gerado a baixo
                     </li>
 
                     <li>
@@ -122,12 +122,12 @@
           <h3>Logs de Conexão:</h3>
           <p class="logs"></p>
         </div>
-        <p class="u-text u-text-2"><a href="https://comunidadezdg.com.br/" class="u-active-grey-80 u-btn u-btn-round u-button-style u-hover-grey-80 u-palette-1-base u-radius-10 u-btn-1">QUERO ENTRAR PARA COMUNIDADE ZDG</a></p>
+        <p class="u-text u-text-2"><a href="https://opara.me/" class="u-active-grey-80 u-btn u-btn-round u-button-style u-hover-grey-80 u-palette-1-base u-radius-10 u-btn-1">QUERO CONHECER MAIS SERVIÇOS DA OPARÁ</a></p>
         
       </div>
     </section>
-    <section class="u-align-left u-clearfix u-section-3" id="ferramenta">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+    <!-- <section class="u-align-left u-clearfix u-section-3" id="ferramenta"> -->
+      <!-- <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h1 class="u-custom-font u-font-source-sans-pro u-text u-text-palette-1-base u-text-1">Nós acreditamos no<br>poder do conhecimento<br>e da tecnologia
         </h1>
         <p class="u-text u-text-grey-40 u-text-2">Faça como mais de 750 alunos e entre para a COMUNIDADE ZDG. Garanta acesso a mais de 200 vídeo aulas sobre API de WhatsApp, grupo de alunos e suporte pessoal do Pedrinho, <a href="https://comunidadezdg.com.br/">clicando aqui.</a> A sua independência financeira começa aqui.</p>
@@ -254,9 +254,9 @@
             </div>
           </div>
         </div>
-      </div>
-    </section>
-    <section class="u-align-center u-clearfix u-palette-3-light-2 u-section-4" id="servico">
+      </div> -->
+    <!-- </section> -->
+    <!-- <section class="u-align-center u-clearfix u-palette-3-light-2 u-section-4" id="servico">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h4 class="u-text u-text-palette-1-base u-text-1">Ferramentas</h4>
         <h1 class="u-text u-text-default u-text-palette-1-base u-text-2">Serviços disponíveis</h1>
@@ -291,8 +291,8 @@
         <p class="u-text u-text-9">Imagem do <a href="https://www.freepik.com/vectors/background" class="u-active-none u-border-1 u-border-black u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-4" target="_blank">Freepik</a>
         </p>
       </div>
-    </section>
-    <section class="u-clearfix u-section-5" id="notificacao">
+    </section> -->
+    <!-- <section class="u-clearfix u-section-5" id="notificacao">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-clearfix u-expanded-width u-gutter-20 u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
@@ -356,8 +356,8 @@
         </div>
       </div>
     </section>
-    <section class="u-align-center u-clearfix u-palette-3-light-2 u-section-7" id="zdg">
-      <div class="u-expanded-width u-palette-4-light-3 u-shape u-shape-rectangle u-shape-1"></div>
+    <section class="u-align-center u-clearfix u-palette-3-light-2 u-section-7" id="zdg"> -->
+      <!-- <div class="u-expanded-width u-palette-4-light-3 u-shape u-shape-rectangle u-shape-1"></div>
       <div class="u-align-center-xs u-container-style u-group u-radius-20 u-shape-round u-white u-group-1">
         <div class="u-container-layout u-valign-middle u-container-layout-1">
           <h1 class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xl u-custom-font u-font-source-sans-pro u-text u-text-default u-text-1">Entre agora para Comunidade ZDG.</h1>
@@ -373,7 +373,7 @@
     </section>
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-21de"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1"><a href="https://comunidadezdg.com.br/">© ZAP das Galáxias</a></p>
-      </div></footer>
+      </div></footer> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js" crossorigin="anonymous"></script>
     <script>
